[gd_scene load_steps=5 format=4 uid="uid://bwpi8ic3tesb8"]

[ext_resource type="TileSet" uid="uid://ddl5lqa65tlur" path="res://Resources/RoguesEnvironsTiles.tres" id="1_40nn7"]
[ext_resource type="Script" path="res://Scripts/base_room.gd" id="1_yqo0s"]
[ext_resource type="TileSet" uid="uid://rqvrx1aog7gv" path="res://Resources/Tilemaps/FloorTileset.tres" id="3_4c7c5"]
[ext_resource type="TileSet" uid="uid://wkwq25lgytw2" path="res://Resources/Tilemaps/WallTileset.tres" id="4_4nfaq"]

[node name="BaseRoom" type="Node2D"]
script = ExtResource("1_yqo0s")

[node name="Tiles" type="Node2D" parent="."]

[node name="Backdrop2" type="TileMapLayer" parent="Tiles" groups=["debugtiles"]]
tile_map_data = PackedByteArray("AAAAAAAAUQAAAAAAAAAAAAEAUQAAAAAAAAAAAAIAUQAAAAAAAAAAAAMAUQAAAAAAAAAAAAQAUQAAAAAAAAAAAAUAUQAAAAAAAAAAAAYAUQAAAAAAAAAAAAcAUQABAAAAAAAAAAgAUQAAAAAAAAAAAAkAUQAAAAAAAAAAAAoAUQAAAAAAAAAAAAsAUQAAAAAAAAAAAAwAUQAAAAAAAAAAAA0AUQAAAAAAAAAAAA4AUQAAAAAAAAABAAAAUQAAAAAAAAABAAEAUQAAAAAAAAABAAIAUQAAAAAAAAABAAMAUQAAAAAAAAABAAQAUQAAAAAAAAABAAUAUQAAAAAAAAABAAYAUQAAAAAAAAABAAcAUQABAAAAAAABAAgAUQAAAAAAAAABAAkAUQAAAAAAAAABAAoAUQAAAAAAAAABAAsAUQAAAAAAAAABAAwAUQAAAAAAAAABAA0AUQAAAAAAAAABAA4AUQAAAAAAAAACAAAAUQAAAAAAAAACAAEAUQAAAAAAAAACAAIAUQAAAAAAAAACAAMAUQAAAAAAAAACAAQAUQAAAAAAAAACAAUAUQAAAAAAAAACAAYAUQAAAAAAAAACAAcAUQABAAAAAAACAAgAUQAAAAAAAAACAAkAUQAAAAAAAAACAAoAUQAAAAAAAAACAAsAUQAAAAAAAAACAAwAUQAAAAAAAAACAA0AUQAAAAAAAAACAA4AUQAAAAAAAAADAAAAUQAAAAAAAAADAAEAUQAAAAAAAAADAAIAUQAAAAAAAAADAAMAUQAAAAAAAAADAAQAUQAAAAAAAAADAAUAUQAAAAAAAAADAAYAUQAAAAAAAAADAAcAUQABAAAAAAADAAgAUQAAAAAAAAADAAkAUQAAAAAAAAADAAoAUQAAAAAAAAADAAsAUQAAAAAAAAADAAwAUQAAAAAAAAADAA0AUQAAAAAAAAADAA4AUQAAAAAAAAAEAAAAUQAAAAAAAAAEAAEAUQAAAAAAAAAEAAIAUQAAAAAAAAAEAAMAUQAAAAAAAAAEAAQAUQAAAAAAAAAEAAUAUQAAAAAAAAAEAAYAUQAAAAAAAAAEAAcAUQABAAAAAAAEAAgAUQAAAAAAAAAEAAkAUQAAAAAAAAAEAAoAUQAAAAAAAAAEAAsAUQAAAAAAAAAEAAwAUQAAAAAAAAAEAA0AUQAAAAAAAAAEAA4AUQAAAAAAAAAFAAAAUQAAAAAAAAAFAAEAUQAAAAAAAAAFAAIAUQAAAAAAAAAFAAMAUQAAAAAAAAAFAAQAUQAAAAAAAAAFAAUAUQAAAAAAAAAFAAYAUQAAAAAAAAAFAAcAUQABAAAAAAAFAAgAUQAAAAAAAAAFAAkAUQAAAAAAAAAFAAoAUQAAAAAAAAAFAAsAUQAAAAAAAAAFAAwAUQAAAAAAAAAFAA0AUQAAAAAAAAAFAA4AUQAAAAAAAAAGAAAAUQAAAAAAAAAGAAEAUQAAAAAAAAAGAAIAUQAAAAAAAAAGAAMAUQAAAAAAAAAGAAQAUQAAAAAAAAAGAAUAUQAAAAAAAAAGAAYAUQAAAAAAAAAGAAcAUQABAAAAAAAGAAgAUQAAAAAAAAAGAAkAUQAAAAAAAAAGAAoAUQAAAAAAAAAGAAsAUQAAAAAAAAAGAAwAUQAAAAAAAAAGAA0AUQAAAAAAAAAGAA4AUQAAAAAAAAAHAAAAUQABAAAAAAAHAAEAUQABAAAAAAAHAAIAUQABAAAAAAAHAAMAUQABAAAAAAAHAAQAUQABAAAAAAAHAAUAUQABAAAAAAAHAAYAUQABAAAAAAAHAAcAUQABAAAAAAAHAAkAUQABAAAAAAAHAAoAUQABAAAAAAAHAAsAUQABAAAAAAAHAAwAUQABAAAAAAAHAA0AUQABAAAAAAAHAA4AUQABAAAAAAAIAAAAUQAAAAAAAAAIAAEAUQAAAAAAAAAIAAIAUQAAAAAAAAAIAAMAUQAAAAAAAAAIAAQAUQAAAAAAAAAIAAUAUQAAAAAAAAAIAAYAUQAAAAAAAAAIAAcAUQABAAAAAAAIAAgAUQAAAAAAAAAIAAkAUQAAAAAAAAAIAAoAUQAAAAAAAAAIAAsAUQAAAAAAAAAIAAwAUQAAAAAAAAAIAA0AUQAAAAAAAAAIAA4AUQAAAAAAAAAJAAAAUQAAAAAAAAAJAAEAUQAAAAAAAAAJAAIAUQAAAAAAAAAJAAMAUQAAAAAAAAAJAAQAUQAAAAAAAAAJAAUAUQAAAAAAAAAJAAYAUQAAAAAAAAAJAAcAUQABAAAAAAAJAAgAUQAAAAAAAAAJAAkAUQAAAAAAAAAJAAoAUQAAAAAAAAAJAAsAUQAAAAAAAAAJAAwAUQAAAAAAAAAJAA0AUQAAAAAAAAAJAA4AUQAAAAAAAAAKAAAAUQAAAAAAAAAKAAEAUQAAAAAAAAAKAAIAUQAAAAAAAAAKAAMAUQAAAAAAAAAKAAQAUQAAAAAAAAAKAAUAUQAAAAAAAAAKAAYAUQAAAAAAAAAKAAcAUQABAAAAAAAKAAgAUQAAAAAAAAAKAAkAUQAAAAAAAAAKAAoAUQAAAAAAAAAKAAsAUQAAAAAAAAAKAAwAUQAAAAAAAAAKAA0AUQAAAAAAAAAKAA4AUQAAAAAAAAALAAAAUQAAAAAAAAALAAEAUQAAAAAAAAALAAIAUQAAAAAAAAALAAMAUQAAAAAAAAALAAQAUQAAAAAAAAALAAUAUQAAAAAAAAALAAYAUQAAAAAAAAALAAcAUQABAAAAAAALAAgAUQAAAAAAAAALAAkAUQAAAAAAAAALAAoAUQAAAAAAAAALAAsAUQAAAAAAAAALAAwAUQAAAAAAAAALAA0AUQAAAAAAAAALAA4AUQAAAAAAAAAMAAAAUQAAAAAAAAAMAAEAUQAAAAAAAAAMAAIAUQAAAAAAAAAMAAMAUQAAAAAAAAAMAAQAUQAAAAAAAAAMAAUAUQAAAAAAAAAMAAYAUQAAAAAAAAAMAAcAUQABAAAAAAAMAAgAUQAAAAAAAAAMAAkAUQAAAAAAAAAMAAoAUQAAAAAAAAAMAAsAUQAAAAAAAAAMAAwAUQAAAAAAAAAMAA0AUQAAAAAAAAAMAA4AUQAAAAAAAAANAAAAUQAAAAAAAAANAAEAUQAAAAAAAAANAAIAUQAAAAAAAAANAAMAUQAAAAAAAAANAAQAUQAAAAAAAAANAAUAUQAAAAAAAAANAAYAUQAAAAAAAAANAAcAUQABAAAAAAANAAgAUQAAAAAAAAANAAkAUQAAAAAAAAANAAoAUQAAAAAAAAANAAsAUQAAAAAAAAANAAwAUQAAAAAAAAANAA0AUQAAAAAAAAANAA4AUQAAAAAAAAAOAAAAUQAAAAAAAAAOAAEAUQAAAAAAAAAOAAIAUQAAAAAAAAAOAAMAUQAAAAAAAAAOAAQAUQAAAAAAAAAOAAUAUQAAAAAAAAAOAAYAUQAAAAAAAAAOAAcAUQABAAAAAAAOAAgAUQAAAAAAAAAOAAkAUQAAAAAAAAAOAAoAUQAAAAAAAAAOAAsAUQAAAAAAAAAOAAwAUQAAAAAAAAAOAA0AUQAAAAAAAAAOAA4AUQAAAAAAAAAHAAgAUQABAAAAAAA=")
tile_set = ExtResource("1_40nn7")
collision_enabled = false
navigation_enabled = false

[node name="UtilityTiles" type="TileMapLayer" parent="Tiles"]
tile_map_data = PackedByteArray("AAAAAAwAUQABAAAAAAAAAA0AUQABAAAAAAAAAA4AUQABAAAAAAABAAwAUQABAAAAAAABAA0AUQABAAAAAAABAA4AUQABAAAAAAACAAwAUQABAAAAAAACAA0AUQABAAAAAAACAA4AUQABAAAAAAADAAwAUQABAAAAAAADAA0AUQABAAAAAAADAA4AUQABAAAAAAAEAAwAUQABAAAAAAAEAA0AUQABAAAAAAAEAA4AUQABAAAAAAAFAAwAUQABAAAAAAAFAA0AUQABAAAAAAAFAA4AUQABAAAAAAAGAAwAUQABAAAAAAAGAA0AUQABAAAAAAAGAA4AUQABAAAAAAAHAAwAUQABAAAAAAAHAA0AUQABAAAAAAAHAA4AUQABAAAAAAAIAAwAUQABAAAAAAAIAA0AUQABAAAAAAAIAA4AUQABAAAAAAAJAAwAUQABAAAAAAAJAA0AUQABAAAAAAAJAA4AUQABAAAAAAAKAAwAUQABAAAAAAAKAA0AUQABAAAAAAAKAA4AUQABAAAAAAALAAwAUQABAAAAAAALAA0AUQABAAAAAAALAA4AUQABAAAAAAAMAAwAUQABAAAAAAAMAA0AUQABAAAAAAAMAA4AUQABAAAAAAANAAwAUQABAAAAAAANAA0AUQABAAAAAAANAA4AUQABAAAAAAAOAAwAUQABAAAAAAAOAA0AUQABAAAAAAAOAA4AUQABAAAAAAAAAAAAUQABAAAAAAAAAAEAUQABAAAAAAAAAAIAUQABAAAAAAAAAAMAUQABAAAAAAAAAAQAUQABAAAAAAAAAAUAUQABAAAAAAAAAAYAUQABAAAAAAAAAAcAUQABAAAAAAAAAAgAUQABAAAAAAAAAAkAUQABAAAAAAAAAAoAUQABAAAAAAAAAAsAUQABAAAAAAABAAAAUQABAAAAAAABAAEAUQABAAAAAAABAAIAUQABAAAAAAABAAMAUQABAAAAAAABAAQAUQABAAAAAAABAAUAUQABAAAAAAABAAYAUQABAAAAAAABAAcAUQABAAAAAAABAAgAUQABAAAAAAABAAkAUQABAAAAAAABAAoAUQABAAAAAAABAAsAUQABAAAAAAACAAAAUQABAAAAAAACAAEAUQABAAAAAAACAAIAUQABAAAAAAACAAMAUQABAAAAAAACAAQAUQABAAAAAAACAAUAUQABAAAAAAACAAYAUQABAAAAAAACAAcAUQABAAAAAAACAAgAUQABAAAAAAACAAkAUQABAAAAAAACAAoAUQABAAAAAAACAAsAUQABAAAAAAADAAAAUQABAAAAAAADAAEAUQABAAAAAAADAAIAUQABAAAAAAAEAAAAUQABAAAAAAAEAAEAUQABAAAAAAAEAAIAUQABAAAAAAAFAAAAUQABAAAAAAAFAAEAUQABAAAAAAAFAAIAUQABAAAAAAAGAAAAUQABAAAAAAAGAAEAUQABAAAAAAAGAAIAUQABAAAAAAAHAAAAUQABAAAAAAAHAAEAUQABAAAAAAAHAAIAUQABAAAAAAAIAAAAUQABAAAAAAAIAAEAUQABAAAAAAAIAAIAUQABAAAAAAAJAAAAUQABAAAAAAAJAAEAUQABAAAAAAAJAAIAUQABAAAAAAAKAAAAUQABAAAAAAAKAAEAUQABAAAAAAAKAAIAUQABAAAAAAALAAAAUQABAAAAAAALAAEAUQABAAAAAAALAAIAUQABAAAAAAAMAAAAUQABAAAAAAAMAAEAUQABAAAAAAAMAAIAUQABAAAAAAANAAAAUQABAAAAAAANAAEAUQABAAAAAAANAAIAUQABAAAAAAAOAAAAUQABAAAAAAAOAAEAUQABAAAAAAAOAAIAUQABAAAAAAAMAAMAUQABAAAAAAAMAAQAUQABAAAAAAAMAAUAUQABAAAAAAAMAAYAUQABAAAAAAAMAAcAUQABAAAAAAAMAAgAUQABAAAAAAAMAAkAUQABAAAAAAAMAAoAUQABAAAAAAAMAAsAUQABAAAAAAANAAMAUQABAAAAAAANAAQAUQABAAAAAAANAAUAUQABAAAAAAANAAYAUQABAAAAAAANAAcAUQABAAAAAAANAAgAUQABAAAAAAANAAkAUQABAAAAAAANAAoAUQABAAAAAAANAAsAUQABAAAAAAAOAAMAUQABAAAAAAAOAAQAUQABAAAAAAAOAAUAUQABAAAAAAAOAAYAUQABAAAAAAAOAAcAUQABAAAAAAAOAAgAUQABAAAAAAAOAAkAUQABAAAAAAAOAAoAUQABAAAAAAAOAAsAUQABAAAAAAADAAMAUQABAAAAAAADAAQAUQABAAAAAAADAAUAUQABAAAAAAADAAYAUQABAAAAAAADAAcAUQABAAAAAAADAAgAUQABAAAAAAADAAkAUQABAAAAAAADAAoAUQABAAAAAAADAAsAUQABAAAAAAAEAAsAUQABAAAAAAAFAAsAUQABAAAAAAAGAAsAUQABAAAAAAAHAAsAUQABAAAAAAAIAAsAUQABAAAAAAAJAAsAUQABAAAAAAAKAAsAUQABAAAAAAALAAsAUQABAAAAAAALAAoAUQABAAAAAAALAAkAUQABAAAAAAALAAgAUQABAAAAAAALAAcAUQABAAAAAAALAAYAUQABAAAAAAALAAUAUQABAAAAAAALAAQAUQABAAAAAAALAAMAUQABAAAAAAAKAAMAUQABAAAAAAAJAAMAUQABAAAAAAAIAAMAUQABAAAAAAAHAAMAUQABAAAAAAAGAAMAUQABAAAAAAAFAAMAUQABAAAAAAAEAAMAUQABAAAAAAA=")
tile_set = ExtResource("1_40nn7")
collision_enabled = false
navigation_enabled = false

[node name="FloorTiles2" type="TileMapLayer" parent="Tiles" groups=["floortiles", "nav-geometry"]]
tile_map_data = PackedByteArray("AAADAAMABgAAAAAAAAADAAQABgAAAAAAAAADAAUABgAAAAAAAAADAAYABgAAAAAAAAADAAcABgAAAAAAAAADAAgABgAAAAAAAAADAAkABgAAAAAAAAADAAoABgAAAAAAAAADAAsABgAAAAAAAAAEAAMABgAAAAAAAAAEAAQABgAAAAAAAAAEAAUABgAAAAAAAAAEAAYABgAAAAAAAAAEAAcABgAAAAAAAAAEAAgABgAAAAAAAAAEAAkABgAAAAAAAAAEAAoABgAAAAAAAAAEAAsABgAAAAAAAAAFAAMABgAAAAAAAAAFAAQABgAAAAAAAAAFAAUABgAAAAAAAAAFAAYABgAAAAAAAAAFAAcABgAAAAAAAAAFAAgABgAAAAAAAAAFAAkABgAAAAAAAAAFAAoABgAAAAAAAAAFAAsABgAAAAAAAAAGAAMABgAAAAAAAAAGAAQABgAAAAAAAAAGAAUABgAAAAAAAAAGAAYABgAAAAAAAAAGAAcABgAAAAAAAAAGAAgABgAAAAAAAAAGAAkABgAAAAAAAAAGAAoABgAAAAAAAAAGAAsABgAAAAAAAAAHAAMABgAAAAAAAAAHAAQABgAAAAAAAAAHAAUABgAAAAAAAAAHAAYABgAAAAAAAAAHAAcABgAAAAAAAAAHAAgABgAAAAAAAAAHAAkABgAAAAAAAAAHAAoABgAAAAAAAAAHAAsABgAAAAAAAAAIAAMABgAAAAAAAAAIAAQABgAAAAAAAAAIAAUABgAAAAAAAAAIAAYABgAAAAAAAAAIAAcABgAAAAAAAAAIAAgABgAAAAAAAAAIAAkABgAAAAAAAAAIAAoABgAAAAAAAAAIAAsABgAAAAAAAAAJAAMABgAAAAAAAAAJAAQABgAAAAAAAAAJAAUABgAAAAAAAAAJAAYABgAAAAAAAAAJAAcABgAAAAAAAAAJAAgABgAAAAAAAAAJAAkABgAAAAAAAAAJAAoABgAAAAAAAAAJAAsABgAAAAAAAAAKAAMABgAAAAAAAAAKAAQABgAAAAAAAAAKAAUABgAAAAAAAAAKAAYABgAAAAAAAAAKAAcABgAAAAAAAAAKAAgABgAAAAAAAAAKAAkABgAAAAAAAAAKAAoABgAAAAAAAAAKAAsABgAAAAAAAAALAAMABgAAAAAAAAALAAQABgAAAAAAAAALAAUABgAAAAAAAAALAAYABgAAAAAAAAALAAcABgAAAAAAAAALAAgABgAAAAAAAAALAAkABgAAAAAAAAALAAoABgAAAAAAAAALAAsABgAAAAAAAAA=")
tile_set = ExtResource("3_4c7c5")
collision_enabled = false

[node name="WallTiles2" type="TileMapLayer" parent="Tiles" groups=["walltiles"]]
tile_map_data = PackedByteArray("AAACAAIAFQAAAAAAAAACAAMAFQAAAAAAAAACAAQAFQAAAAAAAAACAAUAFQAAAAAAAAACAAYAFQAAAAAAAAACAAcAFQAAAAAAAAACAAgAFQAAAAAAAAACAAkAFQAAAAAAAAACAAoAFQAAAAAAAAACAAsAFQAAAAAAAAACAAwAFQAAAAAAAAADAAwAFQAAAAAAAAAEAAwAFQAAAAAAAAAFAAwAFQAAAAAAAAAGAAwAFQAAAAAAAAAHAAwAFQAAAAAAAAAIAAwAFQAAAAAAAAAJAAwAFQAAAAAAAAAKAAwAFQAAAAAAAAALAAwAFQAAAAAAAAAMAAwAFQAAAAAAAAAMAAsAFQAAAAAAAAAMAAoAFQAAAAAAAAAMAAkAFQAAAAAAAAAMAAgAFQAAAAAAAAAMAAcAFQAAAAAAAAAMAAYAFQAAAAAAAAAMAAUAFQAAAAAAAAAMAAQAFQAAAAAAAAAMAAMAFQAAAAAAAAAMAAIAFQAAAAAAAAALAAIAFQAAAAAAAAAKAAIAFQAAAAAAAAAJAAIAFQAAAAAAAAAIAAIAFQAAAAAAAAAHAAIAFQAAAAAAAAAGAAIAFQAAAAAAAAAFAAIAFQAAAAAAAAAEAAIAFQAAAAAAAAADAAIAFQAAAAAAAAAEAAUAFQAAAAAAAAAEAAQAFQAAAAAAAAAFAAQAFQAAAAAAAAAJAAQAFQAAAAAAAAAKAAQAFQAAAAAAAAAKAAUAFQAAAAAAAAAEAAkAFQAAAAAAAAAEAAoAFQAAAAAAAAAFAAoAFQAAAAAAAAAKAAkAFQAAAAAAAAAKAAoAFQAAAAAAAAAJAAoAFQAAAAAAAAA=")
tile_set = ExtResource("4_4nfaq")
collision_enabled = false
navigation_enabled = false

[node name="ClutterTiles2" type="TileMapLayer" parent="Tiles" groups=["cluttertiles"]]
tile_map_data = PackedByteArray("AAAFAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAA=")
tile_set = ExtResource("1_40nn7")
collision_enabled = false

[node name="Utilities" type="Node2D" parent="."]

[node name="PlayerStart" type="Marker2D" parent="Utilities"]
position = Vector2(240, 240)

[node name="Center" type="Marker2D" parent="Utilities"]
position = Vector2(240, 240)

[node name="CreatureSpawnPoints" type="Node2D" parent="Utilities"]

[node name="CreatureStart" type="Marker2D" parent="Utilities/CreatureSpawnPoints"]
position = Vector2(240, 368)

[node name="CreatureStart2" type="Marker2D" parent="Utilities/CreatureSpawnPoints"]
position = Vector2(352, 256)

[node name="CreatureStart3" type="Marker2D" parent="Utilities/CreatureSpawnPoints"]
position = Vector2(240, 112)
